--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,15 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.1
+  Changes:
+    - Empty dependencies
+
+---------------------------------------------------------------------------------------------------
+Version: 1.2.0
+  Minor Features:
+    - Add dried woodchip icons
+    - Add wood pyrolysis 2 technology icon
+
+---------------------------------------------------------------------------------------------------
 Version: 1.1.0
   Minor Features:
     - Add heavy oil adsorption icon
